# robot-datastore

./: README.md  reachy-mini-camera-arch.md
frame-bucket/: .env.example  Cargo.toml  README.md  check_bucket.py  config.toml  docker-compose.yml  list_images.py  manage.py  phash_compare.py  pyproject.toml
frame-bucket/api/: Cargo.toml
frame-bucket/api/src/: main.rs
frame-bucket/common/: Cargo.toml
frame-bucket/common/src/: config.rs  frame.rs
frame-bucket/consumer/: Cargo.toml
frame-bucket/consumer/src/: db.rs  eviction.rs  main.rs  storage.rs
frame-bucket/consumer/src/filter/: framesize.rs  histogram.rs  mod.rs  phash.rs  traits.rs
frame-bucket/consumer/src/recorder/: encoder.rs  keys.rs  mod.rs  state.rs
frame-bucket/producer/: Cargo.toml
frame-bucket/producer/src/: h264.rs  main.rs  mjpeg.rs
stream-viewer/: index.html  og_index.html  robot.html  run.md  sources.json  styles.css  webrtc.js
