[package]
name = "frame-bucket-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "frame-bucket-api"
path = "src/main.rs"

[dependencies]
frame-bucket-common = { path = "../common" }

axum = "0.7"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
aws-sdk-s3 = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-credential-types = "1"
aws-types = "1"
chrono = "0.4"
libc = "0.2"
